--- a/README
+++ b/README
@@ -2,4 +2,14 @@
 | dutch-neuron-scalping |
 -------------------------
 
+
+# neuron
+https://en.wikipedia.org/wiki/Neuron
+
+# scalping
+https://en.wikipedia.org/wiki/Scalping
+
+# netherlands
+https://en.wikipedia.org/wiki/Netherlands
+
 bemoeigurus at work
